Applied all modifications suggested